# CppPluginBasedFileAnalysis

./: clean.sh  readme.md  run.sh
finalVersion/: CMakeLists.txt  CPluginController.cpp  CPluginController.h  IPlugin.h  Line.cpp  SearchPlugin.cpp  Size.cpp  SuffixS.cpp  SuffixW.cpp  Word.cpp  clean.sh  main.cpp
version1/: CMakeLists.txt  a.h  a1.cpp  a2.cpp  main.cpp  makefile  run.sh  test.cpp
version2/: CMakeLists.txt  a.h  main.cpp
version3/: CMakeLists.txt  SearchPlugin.h  a.h  a1.cpp  a2.cpp  main.cpp
version4/: CMakeLists.txt  CPluginController.cpp  CPluginController.h  IPlugin.h  SearchPlugin.h  a1.cpp  a2.cpp  main.cpp
version5/: Byte.cpp  CMakeLists.txt  CPluginController.cpp  CPluginController.h  IPlugin.h  Line.cpp  SearchPlugin.cpp  main.cpp
